Fix issues with extra whitespaces around newlines

--- a/styles/prosilver/theme/common.css
+++ b/styles/prosilver/theme/common.css
@@ -1023,10 +1023,6 @@ textarea.quickedit {
 	font-size: 1.1em;
 }
 
-.text-content {
-	white-space: pre-wrap;
-}
-
 .inline-attachment {
 	white-space: normal;
 }
